--- a/public/policy.html
+++ b/public/policy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Smart Babe NG Policy</title>
+	<title>Smart BabeNG Privacy Policy</title>
 </head>
 <body>
 <h1>Legal & Privacy Policy</h1>
